converter可以处理null值